kubernetes/platform/ingress/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: ingress
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: homelab-ingress-test
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
